src/test/ui/consts/single_variant_match_ice.stderr
error[E0744]: `match` is not allowed in a `const`
  --> $DIR/single_variant_match_ice.rs:5:18
   |
LL |   const FOO: u32 = match Foo::Prob {
   |  __________________^
LL | |     Foo::Prob => 42,
LL | | };
   | |_^

error[E0744]: `match` is not allowed in a `const`
  --> $DIR/single_variant_match_ice.rs:9:18
   |
LL |   const BAR: u32 = match Foo::Prob {
   |  __________________^
LL | |     x => 42,
LL | | };
   | |_^

error[E0744]: `match` is not allowed in a `const fn`
  --> $DIR/single_variant_match_ice.rs:17:9
   |
LL | /         match *self {
LL | |             Prob => 0x1,
LL | |         }
   | |_________^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0744`.
